--- a/src/app/signin/signin.component.scss
+++ b/src/app/signin/signin.component.scss
@@ -1,4 +1,5 @@
-body {
+main {
+  height: 100%;
   background: url("/assets/city-street-1.jpeg") !important;
 
   form {
@@ -13,24 +14,25 @@ body {
       text-align: center;
     }
   }
+
   mat-card {
     width: 50%;
     padding: 10px;
     margin: auto;
-    .row{
-      .col-6{
-        a{
+    .row {
+      .col-6 {
+        a {
           display: flex;
           flex-direction: row-reverse;
           padding-right: 15px;
-          color:#f44336,
+          color: #f44336;
         }
       }
     }
 
     .mat-card:not([class*="mat-elevation-z"]) {
-      box-shadow: 0px 7px 10px -1px rgb(0 0 0 / 20%),
-        3px 6px 11px 20px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important;
+      box-shadow: 0px 7px 10px -1px rgb(0 0 0 / 20%), 3px 6px 11px 20px rgb(0 0 0 / 14%),
+        0px 1px 3px 0px rgb(0 0 0 / 12%) !important;
     }
   }
 }
